[gi] check to see if object is a member of a union when validating paramaters

* union members are not subclasses of the union they belong to so if an
   inteface requires you pass a union but you pass one of its members
   there will be a type error
 * this patch checks to see if the type you are passing is a member of the
   union and passes the checks if it is
 * this works in python 3 but in python 2 methods do their own isinstance
   check on the instance parameter (e.g. self) so we need to figure
   out how to override that for union methods (e.g. Gdk.Event.get_state)

https://bugzilla.gnome.org/show_bug.cgi?id=642554